fix contrast on disabled timeline step icon

--- a/app/styles/component.steps.scss
+++ b/app/styles/component.steps.scss
@@ -37,6 +37,13 @@
   color: $blue-gray-dark-contrast;
 }
 
-.steps.steps--has-line .step::before {
+// Balance line color with disabled steps background color
+.steps.steps--has-line .step::before,
+.steps.steps--timeline .step::before {
   background-color: $blue-gray-light;
+}
+
+// Fix contrast of disabled timeline step
+.steps.steps--timeline .step.step--disabled .step__icon {
+  color: $white;
 }
